# detection_vlm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
detection_vlm_msgs/: CMakeLists.txt  package.xml
detection_vlm_python/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py
detection_vlm_python/detection_vlm_python/: __init__.py  misc.py  models.py  output.py
detection_vlm_python/detection_vlm_python/openai_client/: __init__.py  config.py  openai_client.py
detection_vlm_python/src/detection_vlm_python/: __init__.py  config.py  misc.py  models.py  output.py
detection_vlm_python/src/detection_vlm_python/openai_client/: __init__.py  config.py  openai_client.py
detection_vlm_ros/: CMakeLists.txt  package.xml  setup.py
detection_vlm_ros/app/: detection_vlm_node.py  reasoning_vlm_node.py
detection_vlm_ros/cfg/: DetectionVLMConfig.cfg
detection_vlm_ros/config/: classes.txt  detection_vlm.yaml  detection_yoloe.yaml  reasoning_vlm.yaml
detection_vlm_ros/detection_vlm_ros/: __init__.py  image_worker.py  point_cloud2.py  ros_conversions.py
detection_vlm_ros/launch/: cam_front_tf.launch  detection_vlm.launch  detection_vlm.launch.yaml  reasoning_vlm.launch  reasoning_vlm.launch.yaml  recorded_bag_detection.launch  recorded_bag_reasoning.launch
detection_vlm_ros/rviz/: lapwing.rviz  lapwing_reasoning.rviz  reasoning_unipilot.rviz  yoloe_unipilot.rviz
detection_vlm_ros/scripts/: image_pub_example.py
detection_vlm_ros/src/detection_vlm_ros/: __init__.py  image_worker.py  ros_config.py  ros_conversions.py
