<?xml version="1.0"?>
<package format="2">
  <name>detection_vlm_msgs</name>
  <version>0.0.1</version>
  <description>ROS message definitions for detection_vlm</description>

  <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</maintainer>
  <author email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</author>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
