<?xml version="1.0"?>
<package format="2">
    <name>detection_vlm_python</name>
    <version>0.0.0</version>
    <description>Package for detection_vlm_python</description>
    <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</maintainer>
    <license>BSD3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <exec_depend>rospy</exec_depend>
</package>
